Changed todo list templates some. Fixed bug: popup menu too small, edited schema

--- a/Untitled_Project/src/components/PopupMenu.module.css
+++ b/Untitled_Project/src/components/PopupMenu.module.css
@@ -75,7 +75,8 @@
   }
   .signup {
     
-    max-height: 29em;
+    max-height: 34em;
+    max-width: min-content;
     padding: 1em;
 }
 
@@ -104,6 +105,7 @@ input:focus{
   font-weight: 600;
   text-shadow: none;
   margin-top: 5px;
+  text-wrap: wrap;
 
 }
 
